<resources>
    <string name="app_name">Uber</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_customer_map">Map</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="your_awesome_app">Your Awesome App</string>
    <string name="uber_app">Uber App</string>
    <string name="register">Register</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="title_activity_users_maps">Map</string>
</resources>
